# gzreddit-scraper

./: .gitignore  README.md  pyproject.toml
src/gzreddit-scraper/: reddit.py
src/gzreddit_scraper/: main.py  reddit.py  reddit_persist.py  stonkset.py  wsb.py
tools/: get_tickers.sh
