[project]
name = "gzreddit-scraper"
version = "0.1.0"
description = "Scrape reddit"
authors = [{name = "Geoff", email = "geoff@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.2.0",
    "praw>=7.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 80
target-version = "py310"

